package uk.gov.onelogin.features.component.settings.biometricstoggle

import androidx.compose.ui.test.assertHasClickAction
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsToggleable
import androidx.compose.ui.test.hasContentDescription
import androidx.compose.ui.test.hasTestTag
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performScrollTo
import androidx.test.espresso.Espresso
import androidx.test.ext.junit.runners.AndroidJUnit4
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith
import org.mockito.kotlin.mock
import org.mockito.kotlin.verify
import org.mockito.kotlin.whenever
import uk.gov.android.localauth.LocalAuthManager
import uk.gov.android.localauth.preference.LocalAuthPreference
import uk.gov.android.onelogin.core.R
import uk.gov.logging.api.analytics.extensions.getEnglishString
import uk.gov.logging.api.analytics.logging.AnalyticsLogger
import uk.gov.logging.api.analytics.parameters.data.TaxonomyLevel2
import uk.gov.logging.api.analytics.parameters.data.TaxonomyLevel3
import uk.gov.logging.api.analytics.parameters.data.Type
import uk.gov.logging.api.v3dot1.logger.logEventV3Dot1
import uk.gov.logging.api.v3dot1.model.RequiredParameters
import uk.gov.logging.api.v3dot1.model.TrackEvent
import uk.gov.logging.api.v3dot1.model.ViewEvent
import uk.gov.onelogin.core.navigation.domain.Navigator
import uk.gov.onelogin.core.tokens.data.initialise.AutoInitialiseSecureStore
import uk.gov.onelogin.features.FragmentActivityTestCase
import uk.gov.onelogin.features.settings.ui.biometricstoggle.BiometricsToggleAnalyticsViewModel
import uk.gov.onelogin.features.settings.ui.biometricstoggle.BiometricsToggleBodyPreview
import uk.gov.onelogin.features.settings.ui.biometricstoggle.BiometricsToggleScreen
import uk.gov.onelogin.features.settings.ui.biometricstoggle.BiometricsToggleScreenViewModel

@RunWith(AndroidJUnit4::class)
class BiometricsToggleScreenTest : FragmentActivityTestCase() {
    private lateinit var localAuthManager: LocalAuthManager
    private lateinit var navigator: Navigator
    private lateinit var autoInitialiseSecureStore: AutoInitialiseSecureStore
    private lateinit var viewModel: BiometricsToggleScreenViewModel
    private lateinit var logger: AnalyticsLogger
    private lateinit var analyticsViewModel: BiometricsToggleAnalyticsViewModel

    private val title = hasText(context.getString(R.string.app_biometricsToggleTitle))
    private val navIcon = hasContentDescription(context.getString(R.string.app_back_icon))
    private val toggleLabel = hasText(context.getString(R.string.app_biometricsToggleLabel))
    private val toggle = hasTestTag(context.getString(R.string.optInSwitchTestTag))
    private val bulletListTitle =
        hasText(
            context.getString(R.string.app_biometricsToggleBody1)
        )
    private val bullet1 = hasText(context.getString(R.string.app_biometricsToggleBullet1))
    private val bullet2 = hasText(context.getString(R.string.app_biometricsToggleBullet2))
    private val body2Wallet =
        hasText(
            context.getString(R.string.app_biometricsToggleBody2)
        )
    private val body3Wallet =
        hasText(
            context.getString(R.string.app_biometricsToggleBody3)
        )
    private val subtitle = hasText(context.getString(R.string.app_biometricsToggleSubtitle))
    private val body4Wallet =
        hasText(
            context.getString(R.string.app_biometricsToggleBody4)
        )

    @Before
    fun setup() {
        localAuthManager = mock()
        navigator = mock()
        autoInitialiseSecureStore = mock()
        viewModel =
            BiometricsToggleScreenViewModel(
                localAuthManager = localAuthManager,
                navigator = navigator,
                autoInitialiseSecureStore = autoInitialiseSecureStore
            )
        logger = mock()
        analyticsViewModel = BiometricsToggleAnalyticsViewModel(context, logger)
    }

    @Test
    fun bodyDisplayedWallet() {
        val event =
            ViewEvent.Screen(
                name = context.getEnglishString(R.string.app_biometricsToggleTitle),
                id = context.getEnglishString(R.string.biometrics_toggle_wallet_id),
                params = requiredParams
            )
        setContent()

        composeTestRule.apply {
            onNode(title).assertIsDisplayed()
            onNode(toggleLabel).assertIsDisplayed()
            onNode(navIcon).assertIsDisplayed().assertHasClickAction()
            onNode(toggle, useUnmergedTree = true).assertIsToggleable()
            onNode(bulletListTitle).assertIsDisplayed()
            onNode(bullet1).assertIsDisplayed()
            onNode(bullet2).assertIsDisplayed()
            onNode(body2Wallet).assertIsDisplayed()
            onNode(body3Wallet).assertIsDisplayed()
            onNode(subtitle).performScrollTo().assertIsDisplayed()
            onNode(body4Wallet).performScrollTo().assertIsDisplayed()
        }

        verify(logger).logEventV3Dot1(event)
    }

    @Test
    fun testToggleEnabled() {
        whenever(localAuthManager.localAuthPreference)
            .thenReturn(LocalAuthPreference.Enabled(true))
        whenever(localAuthManager.biometricsAvailable()).thenReturn(true)
        // The event would still log the enabled after because we are mocking the
        // localAuthPref to always return enabled
        val eventEnabled =
            TrackEvent.Form(
                text = context.getEnglishString(R.string.app_biometricsToggleLabel),
                response = true.toString(),
                params = requiredParams,
                type = Type.Toggle
            )
        setContent()

        composeTestRule.apply {
            onNode(toggle, useUnmergedTree = true).performClick()
        }

        verify(localAuthManager).toggleBiometrics()
        verify(logger).logEventV3Dot1(eventEnabled)
    }

    @Test
    fun testToggleDisabled() {
        whenever(localAuthManager.localAuthPreference)
            .thenReturn(LocalAuthPreference.Enabled(false))
        whenever(localAuthManager.biometricsAvailable()).thenReturn(true)
        // The event would still log the disabled after because we are mocking the
        // localAuthPref to always return disabled
        val eventDisabled =
            TrackEvent.Form(
                text = context.getEnglishString(R.string.app_biometricsToggleLabel),
                response = true.toString(),
                params = requiredParams,
                type = Type.Toggle
            )
        setContent()

        composeTestRule.apply {
            onNode(toggle, useUnmergedTree = true).performClick()
        }

        verify(localAuthManager).toggleBiometrics()
        verify(logger).logEventV3Dot1(eventDisabled)
    }

    @Test
    fun testBack() {
        whenever(localAuthManager.localAuthPreference)
            .thenReturn(LocalAuthPreference.Enabled(true))
        whenever(localAuthManager.biometricsAvailable()).thenReturn(true)
        val event =
            TrackEvent.Icon(
                text = context.getEnglishString(R.string.app_back_icon),
                params = requiredParams
            )
        setContent()

        composeTestRule.apply {
            onNode(navIcon).performClick()
        }

        verify(navigator).goBack()
        verify(logger).logEventV3Dot1(event)
    }

    @Test
    fun testBackSystem() {
        whenever(localAuthManager.localAuthPreference)
            .thenReturn(LocalAuthPreference.Enabled(true))
        whenever(localAuthManager.biometricsAvailable()).thenReturn(true)
        val event =
            TrackEvent.Button(
                text = context.getEnglishString(R.string.system_backButton),
                params = requiredParams
            )
        setContent()

        Espresso.pressBack()

        verify(navigator).goBack()
        verify(logger).logEventV3Dot1(event)
    }

    @Test
    fun testWalletPreview() {
        composeTestRule.setContent {
            BiometricsToggleBodyPreview()
        }

        composeTestRule.apply {
            onNode(title).assertIsDisplayed()
            onNode(toggleLabel).assertIsDisplayed()
            onNode(navIcon).assertIsDisplayed().assertHasClickAction()
            onNode(toggle, useUnmergedTree = true).assertIsToggleable()
            onNode(bulletListTitle).assertIsDisplayed()
            onNode(bullet1).assertIsDisplayed()
            onNode(bullet2).assertIsDisplayed()
            onNode(body2Wallet).assertIsDisplayed()
            onNode(body3Wallet).assertIsDisplayed()
            onNode(subtitle).performScrollTo().assertIsDisplayed()
            onNode(body4Wallet).performScrollTo().assertIsDisplayed()
        }
    }

    fun setContent() {
        composeTestRule.setContent {
            BiometricsToggleScreen(viewModel, analyticsViewModel)
        }
    }

    companion object {
        private val requiredParams =
            RequiredParameters(
                taxonomyLevel2 = TaxonomyLevel2.SETTINGS,
                taxonomyLevel3 = TaxonomyLevel3.BIOMETRICS_TOGGLE
            )
    }
}
